--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <!-- Шапка сайта с навигацией -->
   <header class="header">
     <div class="container">
       <div class="header-wrap">
@@ -33,6 +34,16 @@
     <!-- /.container -->
   </header>
   <!-- /.header -->
+
+  <!-- Первый видимый блок страницы hero -->
+  <div class="hero">
+    <div class="container">
+      <div class="hero-wrap"></div>
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.hero -->
+
   <!-- <script src="https://static.kuula.io/embed.js" data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%" data-height="640px"></script> -->
 </body>
 </html>
