Основной слайдер рендер

--- a/index.html
+++ b/index.html
@@ -37,13 +37,37 @@
 
   <!-- Первый видимый блок страницы hero -->
   <div class="hero">
-    <div class="container">
-      <div class="hero-wrap"></div>
+    <div class="hero-slider">
+      <div class="hero-slider__item"><img src="img/hero/1.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/2.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/3.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/4.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/5.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/6.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/7.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/8.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/9.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/10.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/11.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/12.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/13.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/14.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/15.jpg" alt=""></div>
+      <div class="hero-slider__item"><img src="img/hero/16.jpg" alt=""></div>
     </div>
-    <!-- /.container -->
+    <!-- /.hero-slider -->
   </div>
   <!-- /.hero -->
 
+
+  <!-- build:js js/main.min.js -->
+  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/slick.min.js"></script>
+  <script src="js/hero-slider.js"></script>
+<!-- endbuild -->
+
   <!-- <script src="https://static.kuula.io/embed.js" data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%" data-height="640px"></script> -->
 </body>
+
+
 </html>
