--- a/index.html
+++ b/index.html
@@ -59,6 +59,104 @@
   </div>
   <!-- /.hero -->
 
+  <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
+  <section class="section edge">
+    <div class="container">
+      <h1 class="title edge__title">Преимущества работы с нами</h1>
+      <!-- /.title edge_title -->
+      <div class="edge-cards">
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">Нет ограничений по ракурсам</h2>
+            <p class="edge-card__text">Обычно получается 4-5 ракурсов на помещение, но если можно найти еще
+              интересный ракурс, вам не нужно платить за него дополнительно.</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">3 правки</h2>
+            <p class="edge-card__text">В стоимость входят 3 правки (каждая правка – не более 20% от общей работы, если
+              нужно переделать интерьер в другом стиле, менять планировку, или большую часть
+              мебели, это рассчитывается отдельно)</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">Разные сценарии освещения</h2>
+          <p class="edge-card__text">В стоимость также входят разные сценарии освещения, если это допустимо для
+            данного интерьера. Обычно это проекты с дополнительным освещением,
+            различными подсветками.</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">Не нужны ссылки на модели</h2>
+            <p class="edge-card__text">Мы сами моделируем корпусную мебель, любую по вашему проекту. Вам не нужно
+              подбирать 3д модели, мы сделаем это за вас.</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">Не нужно пожбирать декор</h2>
+            <p class="edge-card__text">Декор (наполнение открытых полок, кухонный декор, ванные принадлежности), если
+              нет определенных требований, мы также подберем сами в зависимости от стиля и
+              цветового решения проекта.</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <div class="edge-card__image">
+            <img src="img/edge/edge-line.png" alt="линия">
+          </div>
+          <!-- /.edge-card__image -->
+          <div class="edge-card__content">
+            <h2 class="edge-card__title">Сроки</h2>
+            <p class="edge-card__text">На одно помещение обычно уходит 2-4 дня в зависимости от объема и сложности
+              работы. Срок выполнения работы – время для подготовки первого эскиза</p>
+          </div>
+          <!-- /.edge-card__content -->
+        </div>
+        <!-- /.edge-card -->
+        <div class="edge-card">
+          <p class="edge-card__text">У нас нет сложных расчетов стоимости визуализации, 1м2 помещения – 500 рублей</p>
+        </div>
+        <!-- /.edge-card -->
+      </div>
+      <!-- /.edge-cards -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.section edge -->
+
 
   <!-- build:js js/main.min.js -->
   <script src="js/jquery-3.4.1.min.js"></script>
