Фон секции этапы

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Pine-studio</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -56,6 +57,10 @@
       <div class="hero-slider__item"><img src="img/hero/16.jpg" alt=""></div>
     </div>
     <!-- /.hero-slider -->
+    <div class="hero-arrow">
+      <img src="img/hero/down-chevron.svg" alt="стрелка вниз">
+    </div>
+    <!-- /.hero-arrow -->
   </div>
   <!-- /.hero -->
 
