Блок с портфолио на flex

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <nav class="header-nav">
               <ul class="list header-list">
                 <li class="header-list__item"><a href="#">О нас</a></li>
-                <li class="header-list__item"><a href="#">Проекты</a></li>
+                <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
                 <li class="header-list__item"><a href="#">Контакты</a></li>
               </ul>
               <!-- /.list header-list -->
@@ -58,14 +58,16 @@
     </div>
     <!-- /.hero-slider -->
     <div class="hero-arrow">
-      <img src="img/hero/down-chevron.svg" alt="стрелка вниз">
+      <a href="#down">
+        <img src="img/hero/down.png" alt="стрелка вниз">
+      </a>
     </div>
     <!-- /.hero-arrow -->
   </div>
   <!-- /.hero -->
 
   <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
-  <section class="section edge">
+  <section class="section edge" id="down">
     <div class="container">
       <h1 class="title edge__title">Преимущества работы с нами</h1>
       <!-- /.title edge_title -->
@@ -228,6 +230,43 @@
     <!-- /.container -->
   </section>
   <!-- /.section steps -->
+
+  <div class="section portfolio" id="portfolio">
+    <div class="container">
+      <div class="portfolio-cards">
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/2.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/гостиная классика 6.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/дук лестница.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/ЖК Орлиное гнездо су маленький 2.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/квартира 30м - 4ф.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/Муляр спальня гостевая 3.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/Семья ванная финал 3.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/спальня жк тринити 1.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
+          <a href="#"><img src="img/portfolio/СТУДИЯ ФИНАЛ 5.jpg" alt=""></a>
+        </div>
+      </div>
+      <!-- /.portfolio-wrap -->
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.section portfolio -->
 
 
   <!-- build:js js/main.min.js -->
