Эффекти при наведении на карточник в портфолио. Изменение фона описания в этапах работы

--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
             <input type="checkbox" checked>
             <i></i>
             <h2 class="steps__subtitle">Получение технического задания</h2>
-            <ul class="steps__text">
-              <li class="steps__text__item">Чертежи планировки объекта</li>
-              <li class="steps__text__item">Развертка стен с указанием размеров (при необходимости)</li>
-              <li class="steps__text__item">Список отделочных материалов с указанием цветов и фактур</li>
-              <li class="steps__text__item">План расположения мебели с размерами</li>
-              <li class="steps__text__item">Артикулы или фото мебели с указанием видов материала, цвета</li>
-              <li class="steps__text__item">План расположения светильников, названия моделей</li>
-              <li class="steps__text__item">Информация о каких-либо дополнительных деталях, декоре, предпочтениях заказчика, особенностях интерьера</li>
-              <li class="steps__text__item">Фото похожих проектов в качестве примера по настроению и освещению</li>
-              <li class="steps__text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
+            <ul class="steps-text">
+              <li class="steps-text__item">Чертежи планировки объекта</li>
+              <li class="steps-text__item">Развертка стен с указанием размеров (при необходимости)</li>
+              <li class="steps-text__item">Список отделочных материалов с указанием цветов и фактур</li>
+              <li class="steps-text__item">План расположения мебели с размерами</li>
+              <li class="steps-text__item">Артикулы или фото мебели с указанием видов материала, цвета</li>
+              <li class="steps-text__item">План расположения светильников, названия моделей</li>
+              <li class="steps-text__item">Информация о каких-либо дополнительных деталях, декоре, предпочтениях заказчика, особенностях интерьера</li>
+              <li class="steps-text__item">Фото похожих проектов в качестве примера по настроению и освещению</li>
+              <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
                 отдельно картинки, как вам удобно и привычно.
                 Вносится предоплата в размере 50% от стоимости</li>
             </ul>
@@ -193,8 +193,8 @@
             <input type="checkbox" checked>
             <i></i>
             <h2 class="steps__subtitle">Предварительный рендер</h2>
-            <ul class="steps__text">
-              <li class="steps__text__item">Мы отправляем вам предварительный эскизный рендер на согласование
+            <ul class="steps-text">
+              <li class="steps-text__item">Мы отправляем вам предварительный эскизный рендер на согласование
                 Дизайнер вносит необходимые правки</li>
             </ul>
           </li>
@@ -202,24 +202,24 @@
             <input type="checkbox" checked>
             <i></i>
             <h2 class="steps__subtitle">Рендер на согласование</h2>
-            <ul class="steps__text">
-              <li class="steps__text__item">После внесения корректировок, мы отправляем вам 3д визуализацию на
+            <ul class="steps-text">
+              <li class="steps-text__item">После внесения корректировок, мы отправляем вам 3д визуализацию на
                 согласование с заказчиком</li>
-              <li class="steps__text__item">После согласования с заказчиком, вы вносите корректировки</li>
+              <li class="steps-text__item">После согласования с заказчиком, вы вносите корректировки</li>
             </ul>
           </li>
           <li class="steps-list__item">
             <input type="checkbox" checked>
             <i></i>
             <h2 class="steps__subtitle">Финальный рендер</h2>
-            <ul class="steps__text">
-              <li class="steps__text__item">Выполняем корректировки после согласования с заказчиком и отправляем на
+            <ul class="steps-text">
+              <li class="steps-text__item">Выполняем корректировки после согласования с заказчиком и отправляем на
                 утверждение.</li>
-              <li class="steps__text__item">В зависимости от пожелания заказчика, делаем либо
+              <li class="steps-text__item">В зависимости от пожелания заказчика, делаем либо
                 предфинальный рендер, после которого можно еще раз обсудить с заказчиком
                 и внести правки, либо, если все согласовано, рендерим финальное
                 изображение.</li>
-              <li class="steps__text__item">После получения финальных изображений в формате JPG с разрешением не
+              <li class="steps-text__item">После получения финальных изображений в формате JPG с разрешением не
                 менее 2000 точек по большей стороне, вы вносите остаток оплаты</li>
             </ul>
           </li>
