Блок с разделом инстаграм

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <!-- Шапка сайта с навигацией -->
+  <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
   <header class="header">
     <div class="container">
       <div class="header-wrap">
@@ -36,7 +36,7 @@
   </header>
   <!-- /.header -->
 
-  <!-- Первый видимый блок страницы hero -->
+  <!-- ПЕРВИЙ ВИДИМЫ БЛОК НА СТРАНИЦЕ-СЛАЙДЕР hero -->
   <div class="hero">
     <div class="hero-slider">
       <div class="hero-slider__item"><img src="img/hero/1.jpg" alt=""></div>
@@ -69,7 +69,7 @@
   <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
   <section class="section edge" id="down">
     <div class="container">
-      <h1 class="title edge__title">Преимущества работы с нами</h1>
+      <h1 class="title edge__title">ЧТО ОТЛИЧАЕТ НАС ОТ ДРУГИХ СТУДИЙ</h1>
       <!-- /.title edge_title -->
       <div class="edge-cards">
         <div class="edge-card">
@@ -132,7 +132,7 @@
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
-            <h2 class="edge-card__title">Не нужно пожбирать декор</h2>
+            <h2 class="edge-card__title">Не нужно подбирать декор</h2>
             <p class="edge-card__text">Декор (наполнение открытых полок, кухонный декор, ванные принадлежности), если
               нет определенных требований, мы также подберем сами в зависимости от стиля и
               цветового решения проекта.</p>
@@ -168,7 +168,7 @@
   <!-- РАЗДЕЛ С ЭТАПАМИ РАБОТЫ -->
   <section class="section steps">
     <div class="container">
-      <h1 class="title steps__title">Этапы работы с нами</h1>
+      <h1 class="title steps__title">Этапы работы</h1>
       <div class="steps-content">
         <ul class="steps-list">
           <li class="steps-list__item">
@@ -194,8 +194,8 @@
             <i></i>
             <h2 class="steps__subtitle">Предварительный рендер</h2>
             <ul class="steps-text">
-              <li class="steps-text__item">Мы отправляем вам предварительный эскизный рендер на согласование
-                Дизайнер вносит необходимые правки</li>
+              <li class="steps-text__item">Мы отправляем вам предварительный эскизный рендер на согласование</li>
+              <li class="steps-text__item">Дизайнер вносит необходимые правки</li>
             </ul>
           </li>
           <li class="steps-list__item">
@@ -231,35 +231,36 @@
   </section>
   <!-- /.section steps -->
 
+  <!-- РАЗДЕЛ С ГАЛЕРЕЕЙ ПОРТФОЛИО -->
   <div class="section portfolio" id="portfolio">
     <div class="container">
       <div class="portfolio-cards">
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/2.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/гостиная классика 6.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/гостиная классика 6.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/дук лестница.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/дук лестница.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/ЖК Орлиное гнездо су маленький 2.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/ЖК Орлиное гнездо су маленький 2.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/квартира 30м - 4ф.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/квартира 30м - 4ф.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/Муляр спальня гостевая 3.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/Муляр спальня гостевая 3.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/Семья ванная финал 3.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/Семья ванная финал 3.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/спальня жк тринити 1.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/спальня жк тринити 1.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#"><img src="img/portfolio/СТУДИЯ ФИНАЛ 5.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/СТУДИЯ ФИНАЛ 5.jpg" alt=""></a>
         </div>
       </div>
       <!-- /.portfolio-wrap -->
@@ -268,11 +269,54 @@
   </div>
   <!-- /.section portfolio -->
 
+  <!-- РАЗДЕЛ СЛЕДИТЕ ЗА НАМИ В INSTAGRAM -->
+  <section class="section follow">
+    <h1 class="title follow__title">СЛЕДИТЕ ЗА НАМИ В INSTAGRAM</h1>
+    <div class="follow__link">
+      <a href="https://www.instagram.com/mariyevskaya/" target="_blank">@mariyevskaya</a>
+    </div>
+    <div class="follow-slider">
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/1.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/2.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/3.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/4.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/5.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/6.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+    </div>
+    <!-- /.follow-slider -->
+  </section>
+  <!-- /.section follow -->
+
 
   <!-- build:js js/main.min.js -->
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/hero-slider.js"></script>
+  <script src="js/follow-slider.js"></script>
 <!-- endbuild -->
 
   <!-- <script src="https://static.kuula.io/embed.js" data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%" data-height="640px"></script> -->
