--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- /.header-logo -->
             <nav class="header-nav">
               <ul class="list header-list">
-                <li class="header-list__item"><a href="#">О нас</a></li>
+                <li class="header-list__item"><a href="#edge">О нас</a></li>
                 <li class="header-list__item"><a href="#portfolio">Проекты</a></li>
                 <li class="header-list__item"><a href="#">Контакты</a></li>
               </ul>
@@ -58,7 +58,7 @@
     </div>
     <!-- /.hero-slider -->
     <div class="hero-arrow">
-      <a href="#down">
+      <a href="#edge">
         <img src="img/hero/down.png" alt="стрелка вниз">
       </a>
     </div>
@@ -67,7 +67,7 @@
   <!-- /.hero -->
 
   <!-- РАЗДЕЛ С ПРЕИМУЩЕСТВАМИ -->
-  <section class="section edge" id="down">
+  <section class="section edge" id="edge">
     <div class="container">
       <h1 class="title edge__title">ЧТО ОТЛИЧАЕТ НАС ОТ ДРУГИХ СТУДИЙ</h1>
       <!-- /.title edge_title -->
@@ -268,6 +268,9 @@
     <!-- /.container -->
   </div>
   <!-- /.section portfolio -->
+
+  <!-- РАЗДЕЛ С ФОРМОЙ ОБРАТНОЙ СВЯЗИ -->
+  .section.section.
 
   <!-- РАЗДЕЛ СЛЕДИТЕ ЗА НАМИ В INSTAGRAM -->
   <section class="section follow">
