--- a/index.html
+++ b/index.html
@@ -270,7 +270,21 @@
   <!-- /.section portfolio -->
 
   <!-- РАЗДЕЛ С ФОРМОЙ ОБРАТНОЙ СВЯЗИ -->
-  .section.section.
+  <div class="section contacts">
+    <div class="container">
+      <div class="contacts-wrap">
+        <div class="contacts__image"></div>
+        <!-- /.contacts__image -->
+        <div class="contacts-info">
+          <h1 class="title contacts__title">Связаться с нами</h1>
+        </div>
+        <!-- /.contacts-info -->
+      </div>
+      <!-- /.contacts-wrap -->
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.section contacts -->
 
   <!-- РАЗДЕЛ СЛЕДИТЕ ЗА НАМИ В INSTAGRAM -->
   <section class="section follow">
@@ -306,6 +320,21 @@
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
         <div class="follow-slider__image"><img src="img/follow/6.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/7.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/8.jpg" alt=""></div>
+        <!-- /.follow-slider__image -->
+      </div>
+      <!-- /.follow-slider__item -->
+      <div class="follow-slider__item">
+        <div class="follow-slider__image"><img src="img/follow/9.jpg" alt=""></div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
