--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Pine-studio</title>
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/5.0.0/css/font-awesome.min.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -284,27 +284,27 @@
           </div>
           <!-- /.contacts-phone -->
           <div class="contacts-email">
-            <a href="mailto:info@avt-af.ru">info@avt-af.ru</a>
+            <a href="mailto:pinestudio3d@gmail.com">pinestudio3d@gmail.com</a>
           </div>
           <!-- /.contacts-email -->
           <div class="contacts-social">
             <ul class="contacts-social__list">
-              <li class="contacts-social__item">
-                <a href="#" target="_blank">
+              <li class="contacts-social__item whatsapp">
+                <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
                   <i class="fab fa-whatsapp"></i>
                 </a>
               </li>
-              <li class="contacts-social__item">
-                <a href="#" target="_blank">
+              <li class="contacts-social__item instagram">
+                <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </li>
-              <li class="contacts-social__item">
+              <li class="contacts-social__item telegram">
                 <a href="#" target="_blank">
                   <i class="fab fa-telegram-plane"></i>
                 </a>
               </li>
-              <li class="contacts-social__item">
+              <li class="contacts-social__item behance">
                 <a href="#" target="_blank">
                   <i class="fab fa-behance"></i>
                 </a>
