--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 					<form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
 						<input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
 						<input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
-						<input type="email" name="useremail" class="input contacts__input" placeholder="Ваш email">
+						<input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
 						<button type="submit" class="button contacts__button">Отправить</button>
 					</form>
 					<!-- /.form call__form -->
@@ -386,6 +386,44 @@
     <!-- /.follow-slider -->
   </section>
   <!-- /.section follow -->
+
+  <footer class="footer">
+      <div class="container">
+        <div class="footer-wrap">
+        <div class="footer-logo"></div>
+        <!-- /.footer-logo -->
+        <div class="footer-social">
+          <ul class="footer-social__list list">
+            <li class="footer-social__item whatsapp">
+              <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+              </a>
+            </li>
+            <li class="footer-social__item instagram">
+              <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="footer-social__item telegram">
+              <a href="#" target="_blank">
+                <i class="fab fa-telegram-plane"></i>
+              </a>
+            </li>
+            <li class="footer-social__item behance">
+              <a href="#" target="_blank">
+                <i class="fab fa-behance"></i>
+              </a>
+            </li>
+          </ul>
+          <!-- /.footer-list -->
+        </div>
+        <!-- /.footer-social -->
+      </div>
+      <!-- /.footer-wrap -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
   <!-- build:js js/main.min.js -->
