--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="container">
       <div class="header-wrap">
           <div class="header-logo">
+            <img src="img/header/Original.svg" alt="">
             </div>
             <!-- /.header-logo -->
             <nav class="header-nav">
@@ -39,7 +40,6 @@
   <!-- ПЕРВИЙ ВИДИМЫ БЛОК НА СТРАНИЦЕ-СЛАЙДЕР hero -->
   <div class="hero">
     <div class="hero-slider">
-      <div class="hero-slider__item"><img src="img/hero/1.jpg" alt=""></div>
       <div class="hero-slider__item"><img src="img/hero/2.jpg" alt=""></div>
       <div class="hero-slider__item"><img src="img/hero/3.jpg" alt=""></div>
       <div class="hero-slider__item"><img src="img/hero/4.jpg" alt=""></div>
@@ -342,8 +342,13 @@
                 </a>
               </li>
               <li class="contacts-social__item behance">
-                <a href="#" target="_blank">
+                <a href="https://www.behance.net/pinestudio3d" target="_blank">
                   <i class="fab fa-behance"></i>
+                </a>
+              </li>
+              <li class="contacts-social__item pinterest">
+                <a href="https://www.pinterest.ru/pinestudio3d" target="_blank">
+                  <i class="fab fa-pinterest"></i>
                 </a>
               </li>
             </ul>
@@ -375,47 +380,74 @@
     </div>
     <div class="follow-slider">
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/1.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BX0cn3dH63Y/?igshid=fg9m8gejknsb" target="_blank">
+            <img src="img/follow/1.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/2.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BYnrd4CHs1X/?igshid=1739mcndk3xqh" target="_blank">
+            <img src="img/follow/2.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/3.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BgDuHMjhXk9/?igshid=1s5jwn3njxajy" target="_blank">
+            <img src="img/follow/3.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/4.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BoGY4LYFOtA/?igshid=16qfhkwe72q7f" target="_blank">
+            <img src="img/follow/4.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/5.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BwG-UJwlv1_/?igshid=12gid4iwgp7nj" target="_blank">
+            <img src="img/follow/5.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/6.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BvgZE4slp3P/?igshid=7q0qwxcnf9j8" target="_blank">
+            <img src="img/follow/6.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/7.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BhoPn4dFXIn/?igshid=fth1fz06lcue" target="_blank">
+            <img src="img/follow/7.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/8.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BeilfuxHxoW/?igshid=57hxr24i2b4p" target="_blank">
+            <img src="img/follow/8.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
       <div class="follow-slider__item">
-        <div class="follow-slider__image"><img src="img/follow/9.jpg" alt=""></div>
+        <div class="follow-slider__image">
+          <a href="https://www.instagram.com/p/BfstdxYgjZ3/?igshid=zkggtiu4kit8" target="_blank">
+            <img src="img/follow/9.jpg" alt=""></a>
+        </div>
         <!-- /.follow-slider__image -->
       </div>
       <!-- /.follow-slider__item -->
@@ -428,7 +460,9 @@
   <footer class="footer">
       <div class="container">
         <div class="footer-wrap">
-        <div class="footer-logo"></div>
+        <div class="footer-logo">
+          <img src="img/footer/White.svg" alt="">
+        </div>
         <!-- /.footer-logo -->
         <div class="footer-social">
           <ul class="footer-social__list list">
@@ -448,7 +482,7 @@
               </a>
             </li>
             <li class="footer-social__item behance">
-              <a href="#" target="_blank">
+              <a href="https://www.behance.net/pinestudio3d" target="_blank">
                 <i class="fab fa-behance"></i>
               </a>
             </li>
