--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <!-- /.compare-text -->
         </div>
         <!-- /.compare-block -->
-        <div class="compare-block compare_dark">
+        <div class="compare-block">
           <div class="compare-text">
             <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то информацию. Может полезную, а может не очень</p>
           </div>
