--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
       <div class="edge-cards">
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            <!-- <img src="img/edge/edge-line.png" alt="линия"> -->
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -87,7 +88,7 @@
         <!-- /.edge-card -->
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -101,7 +102,7 @@
         <!-- /.edge-card -->
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -115,7 +116,7 @@
         <!-- /.edge-card -->
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -128,7 +129,7 @@
         <!-- /.edge-card -->
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -142,7 +143,7 @@
         <!-- /.edge-card -->
         <div class="edge-card">
           <div class="edge-card__image">
-            <img src="img/edge/edge-line.png" alt="линия">
+            •
           </div>
           <!-- /.edge-card__image -->
           <div class="edge-card__content">
@@ -236,31 +237,34 @@
     <div class="container">
       <div class="portfolio-cards">
         <div class="portfolio-card">
+          <a href="projects/1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
+        </div>
+        <div class="portfolio-card">
           <a href="#" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/гостиная классика 6.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/3.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/дук лестница.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/ЖК Орлиное гнездо су маленький 2.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/квартира 30м - 4ф.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/Муляр спальня гостевая 3.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/7.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/Семья ванная финал 3.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/спальня жк тринити 1.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a href="#" target="_blank"><img src="img/portfolio/СТУДИЯ ФИНАЛ 5.jpg" alt=""></a>
+          <a href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
         </div>
       </div>
       <!-- /.portfolio-wrap -->
